# SPLAT_CARD

./: Dockerfile  README.md  docker-compose.yml
backend/: Makefile  content_conf  main_config.json  pyproject.toml  requirements.txt  run.py  try.py
backend/alembic/: env.py
backend/alembic/versions/: 20250609_fa79aeb78d8e_initial.py
backend/app/: exeptions.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: research.py  user_token.py
backend/app/schemas/: research.py  user_token.py
backend/app/service/: research.py  user_token.py
backend/config/: api.py  app.py  db.py  file_storage.py  s3.py
backend/database/: __init__.py  admin.py  db.py  db_accessor.py  db_metadata.py  exeptions.py  types.py  unitofwork.py
backend/database/models/: .model_template.txt  __init__.py  mixin.py  research.py  user_tokens.py
backend/database/repository/: __init__.py  repository.py  research.py  user_token.py
backend/log/: db.py
backend/neiron/: image_processor.py
backend/neiron/SPLAT_TEST_STRIPS/: cc.py  check_detection.py  colorcorrection.py  concentration.py  create_main_config_colormeter.py  custom_pilot.py  detection.py  preprocessing.py  test_integration.py  test_pilot.py  translate_transform_detection.py
backend/storage/file_storage/: file_storage.py
backend/storage/protocol/: config_bucket.md  protocol.py
backend/storage/s3/: s3_storage.py  s3_storage_cons.py
backend/tools/: info.md
backend/tools/backup/: backup.py  config.json  info.md
