[tool.poetry]
name = "SPLAT-ANALIZE"
version = "0.1.0"
description = ""
authors = ["andreyvaran <moscow.russia.mai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
fastapi = "^0.111.1"
asyncpg = "^0.29.0"
aiohttp = "^3.10.1"
uvicorn = "^0.30.6"
sqladmin = "^0.18.0"
alembic-postgresql-enum = "^1.3.0"
redis = "^5.2.0"
ruff = "^0.5.4"
black = "^24.4.2"


#addict = "2.4.0"
#brotli-python = "1.0.9"
#bzip2 = "1.0.8"
#ca-certificates = "2025.2.25"
#cairo = "1.16.0"
#catboost = "1.2.3"
#certifi = "2025.1.31"
#charset-normalizer = "3.3.2"
#contourpy = "1.3.1"
#cycler = "0.11.0"
#expat = "2.6.4"
#ffmpeg = "4.3"
#filelock = "3.13.1"
#font-ttf-dejavu-sans-mono = "2.37"
#font-ttf-inconsolata = "2.001"
#font-ttf-source-code-pro = "2.030"
#font-ttf-ubuntu = "0.83"
#fontconfig = "2.14.1"
#fonts-anaconda = "1"
#fonts-conda-ecosystem = "1"
#fonttools = "4.55.3"
#freetype = "2.12.1"
#fribidi = "1.0.10"
#fsspec = "2024.12.0"
#gdk-pixbuf = "2.42.10"
#gettext = "0.21.0"
#glib = "2.78.4"
#glib-tools = "2.78.4"
#gmp = "6.3.0"
#gmpy2 = "2.2.1"
#gnutls = "3.6.15"
#graphite2 = "1.3.14"
#graphviz = "2.50.0"
#gts = "0.7.6"
#harfbuzz = "10.2.0"
#icu = "73.1"
#idna = "3.7"
#imageio = "2.37.0"
#jinja2 = "3.1.6"
#joblib = "1.4.2"
#kiwisolver = "1.4.8"
#lame = "3.100"
#lazy-loader = "0.4"
#lcms2 = "2.16"
#lerc = "4.0.0"
#libabseil = "20230802.1"
#libblas = "3.9.0"
#libcblas = "3.9.0"
#libcxx = "20.1.1"
#libdeflate = "1.22"
#libffi = "3.4.4"
#libgd = "2.3.3"
#libgfortran = "5.0.0"
#libgfortran5 = "11.3.0"
#libglib = "2.78.4"
#libiconv = "1.16"
#libidn2 = "2.3.4"
#libjpeg-turbo = "2.0.0"
#liblapack = "3.9.0"
#libopenblas = "0.3.21"
#libpng = "1.6.39"
#libprotobuf = "4.24.4"
#librsvg = "2.56.3"
#libtasn1 = "4.19.0"
#libtiff = "4.5.1"
#libtool = "2.4.7"
#libunistring = "0.9.10"
#libuv = "1.48.0"
#libwebp-base = "1.3.2"
#libxml2 = "2.13.5"
#libzlib = "1.2.13"
#llvm-openmp = "20.1.1"
#lz4-c = "1.9.4"
#markdown-it-py = "3.0.0"
#markupsafe = "3.0.2"
#matplotlib-base = "3.10.0"
#mdurl = "0.1.2"
mkl = "2022.2.1"
mmcv = "2.0.0rc4"
mmdet = "2.3.0"
#mmengine = "0.10.4"
mmyolo = "0.6.0"
#mpc = "1.3.1"
#mpfr = "4.2.1"
mpmath = "1.3.0"
#ncurses = "6.4"
#nettle = "3.7.3"
networkx = "3.4.2"
numpy = "1.24.4"
opencv-python = "4.11.0.86"
#openh264 = "2.1.1"
#openjpeg = "2.5.2"
#openssl = "3.0.16"
packaging = "24.2"
#pandas = "2.2.3"
#pango = "1.50.7"
#pcre2 = "10.42"
pillow = "11.1.0"
#pixman = "0.40.0"
platformdirs = "3.10.0"
plotly = "5.24.1"
pooch = "1.8.2"
#prettytable = "3.16.0"
#pycocotools = "2.0.8"
#pygments = "2.19.1"
#pyparsing = "3.2.0"
#pysocks = "1.7.1"
#python-dateutil = "2.9.0post0"
#python-graphviz = "0.20.1"
#python-tzdata = "2023.3"
#python_abi = "3.11"
#pytz = "2024.1"
#pywavelets = "1.8.0"
#pyyaml = "6.0.2"
#readline = "8.2"
#requests = "2.32.3"
#rich = "13.9.4"
scikit-image = "0.20.0"
scikit-learn = "1.3.0"
scipy = "1.10.1"
setuptools = "75.8.0"
shapely = "2.0.7"
six = "1.16.0"
#sleef = "3.5.1"
#sqlite = "3.45.3"
sympy = "1.13.3"
tbb = "2021.8.0"
tenacity = "9.0.0"
termcolor = "2.5.0"
terminaltables = "3.1.10"
threadpoolctl = "3.6.0"
#tifffile = "2025.3.30"
#tk = "8.6.14"
torch = "2.0.0"
#torchaudio = "2.1.0"
torchvision = ">0.15.0"
tqdm = "4.67.1"
##typing_extensions = "4.12.2"
#unicodedata2 = "15.1.0"
#urllib3 = "2.3.0"
#wcwidth = "0.2.13"
#wheel = "0.43.0"
#xz = "5.6.4"
#yapf = "0.43.0"
#zlib = "1.2.13"
#zstd = "1.5.6"
pandas = "^2.3.0"

#exclude = ["mmengine"]


[tool.ruff]
exclude = [
    ".direnv",
    ".idea",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "alembic"
]

# Same as Black.
line-length = 99
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 99
target-version = ["py310"]
skip-string-normalization = false
